# mark-sideways

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
mark_sideways/: __version__.py  cli.py
